Fixed Sundannese Bug
Fixed the request from GET to POST also added API version as a requestable object

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 __pycache__
-Aksa
+AksaraSundaOCR/__pycache__/AksaraLatin.cpython-37.pyc
+AksaraSundaOCR/__pycache__/AksaraSundaPraser.cpython-37.pyc
+AksaraSundaOCR/__pycache__/data_processor.cpython-37.pyc
